<resources>
    <string name="app_name">Footwho?</string>

    <string name="my_teams">My Teams</string>
    <string name="matchday">Matchday</string>
    <string name="country">Country</string>

    <string name="nav_my_teams">My teams</string>
    <string name="nav_other_teams">Other teams</string>
    <string name="nav_my_competitions">My competitions</string>
    <string name="nav_other_competitions">Other competitions</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_about">About</string>

    <string name="action_search">Search</string>
    <string name="label_fixtures">Fixtures:</string>
    <string name="laber_league_table">League table:</string>
    <string name="pos">Pos</string>
    <string name="team">Team</string>
    <string name="played">Played</string>
    <string name="points">Points</string>
    <string name="gf">GF</string>
    <string name="ga">GA</string>
    <string name="gd">GD</string>

    <string-array name="menu_options">
        <item>My teams</item>
        <item>Other teams</item>
        <item>My competitions</item>
        <item>Other competitions</item>
        <item>Settings</item>
        <item>About</item>
    </string-array>
</resources>
