<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/teamsMenu"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_my_teams"
            android:checked="true"
            android:icon="@drawable/ic_myteams"
            android:title="@string/nav_my_teams"/>
        <item
            android:id="@+id/nav_other_teams"
            android:checked="true"
            android:icon="@drawable/ic_otherteams"
            android:title="@string/nav_other_teams"/>
    </group>
    <group
        android:id="@+id/competitionsMenu"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_my_competitions"
            android:checked="true"
            android:icon="@drawable/ic_mycompetitions"
            android:title="@string/nav_my_competitions"/>
        <item
            android:id="@+id/nav_other_competitions"
            android:checked="true"
            android:icon="@drawable/ic_othercompetitions"
            android:title="@string/nav_other_competitions"/>
    </group>
    <group
        android:id="@+id/settingsMenu"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_settings"
            android:checked="true"
            android:icon="@drawable/ic_settings"
            android:title="@string/nav_settings"/>
        <item
            android:id="@+id/nav_about"
            android:checked="true"
            android:icon="@drawable/ic_about"
            android:title="@string/nav_about"/>
    </group>
</menu>