<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.CardView
        android:id="@+id/cardInformation"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:cardBackgroundColor="@color/colorPrimary"
        app:cardCornerRadius="4pt"
        app:cardElevation="2.5dp"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="3dp"
        android:layout_marginEnd="3dp"
        android:layout_marginRight="3dp"
        android:layout_marginStart="3dp"
        android:layout_marginTop="5dp"
        android:layout_weight="1.5">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_margin="2pt">
            <ImageView
                android:layout_marginTop="5dp"
                android:layout_marginBottom="3dp"
                android:layout_gravity="center"
                android:layout_width="140dp"
                android:layout_height="140dp"
                android:id="@+id/teamImageView"/>
            <TextView
                android:layout_marginBottom="3dp"
                android:layout_gravity="center"
                android:id="@+id/teamNameLbl"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_marginBottom="5dp"
                android:layout_gravity="center"
                android:textSize="14sp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:id="@+id/countryLbl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </android.support.v7.widget.CardView>


    <android.support.v7.widget.CardView
        android:id="@+id/cardFixtures"
        android:layout_width="match_parent"
        app:cardCornerRadius="4pt"
        app:cardElevation="2.5dp"
        android:layout_height="0dp"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="3dp"
        android:layout_marginEnd="3dp"
        android:layout_marginRight="3dp"
        android:layout_marginStart="3dp"
        android:layout_weight="1">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white">
            <TextView
                android:id="@+id/fixtureLbl"
                android:text="@string/label_fixtures"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="2dp"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <View
                android:id="@+id/dividerFixtures"
                android:layout_below="@+id/fixtureLbl"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="1dp"
                android:background="@color/light_gray"/>
            <ProgressBar
                android:id="@+id/indeterminateBarFixture"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:indeterminate="true"
                android:indeterminateTintMode="src_atop"
                android:indeterminateTint="@color/colorPrimary"
                android:layout_below="@+id/dividerFixtures"
                android:visibility="gone"/>

            <TextView
                android:id="@+id/error_fixture"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:textSize="14sp"
                android:layout_below="@+id/dividerFixtures"
                android:layout_centerInParent="true"/>

            <ListView
                android:layout_below="@+id/dividerFixtures"
                android:id="@+id/fixtureList"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scrollbarAlwaysDrawVerticalTrack="true"></ListView>
        </RelativeLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/cardLeagueTable"
        android:layout_width="match_parent"
        app:cardCornerRadius="4pt"
        app:cardElevation="2.5dp"
        android:layout_weight="1"
        android:layout_height="0dp"
        android:layout_marginBottom="3dp"
        android:layout_marginLeft="3dp"
        android:layout_marginEnd="3dp"
        android:layout_marginRight="3dp"
        android:layout_marginStart="3dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white">

            <TextView
                android:id="@+id/leagueTableLbl"
                android:text="@string/laber_league_table"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="2dp"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <View
                android:id="@+id/dividerLeague"
                android:layout_below="@+id/leagueTableLbl"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="1dp"
                android:background="@color/light_gray"/>

            <LinearLayout
                android:id="@+id/row"
                android:orientation="horizontal"
                android:layout_below="@id/dividerLeague"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:text="@string/pos"
                    android:gravity="center"
                    android:layout_marginLeft="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="3dp"
                    android:layout_marginBottom="3dp"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:textSize="12sp"/>

                <TextView
                    android:text="@string/team"
                    android:gravity="center"
                    android:layout_marginLeft="2dp"
                    android:layout_marginStart="2dp"
                    android:layout_marginTop="3dp"
                    android:layout_marginBottom="3dp"
                    android:layout_width="0dp"
                    android:layout_weight="10"
                    android:layout_height="match_parent"
                    android:textSize="12sp"/>

                <TextView
                    android:text="@string/played"
                    android:gravity="center"
                    android:layout_marginLeft="2dp"
                    android:layout_marginStart="2dp"
                    android:layout_marginTop="3dp"
                    android:layout_marginBottom="3dp"
                    android:layout_width="0dp"
                    android:layout_weight="3"
                    android:layout_height="match_parent"
                    android:textSize="12sp"/>

                <TextView
                    android:text="@string/points"
                    android:gravity="center"
                    android:layout_marginLeft="2dp"
                    android:layout_marginStart="2dp"
                    android:layout_marginTop="3dp"
                    android:layout_marginBottom="3dp"
                    android:layout_width="0dp"
                    android:layout_weight="3"
                    android:layout_height="match_parent"
                    android:textSize="12sp"/>

                <TextView
                    android:text="@string/gf"
                    android:gravity="center"
                    android:layout_marginLeft="2dp"
                    android:layout_marginStart="2dp"
                    android:layout_marginTop="3dp"
                    android:layout_marginBottom="3dp"
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:layout_height="match_parent"
                    android:textSize="12sp"/>

                <TextView
                    android:text="@string/ga"
                    android:gravity="center"
                    android:layout_marginLeft="2dp"
                    android:layout_marginStart="2dp"
                    android:layout_marginTop="3dp"
                    android:layout_marginBottom="3dp"
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:layout_height="match_parent"
                    android:textSize="12sp"/>

                <TextView
                    android:text="@string/gd"
                    android:gravity="center"
                    android:layout_marginLeft="2dp"
                    android:layout_marginStart="2dp"
                    android:layout_marginTop="3dp"
                    android:layout_marginBottom="3dp"
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:layout_height="match_parent"
                    android:textSize="12sp"/>
            </LinearLayout>
            <View
                android:id="@+id/dividerRow"
                android:layout_below="@+id/row"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="1dp"
                android:background="@color/lighter_gray"/>

            <ProgressBar
                android:id="@+id/indeterminateBarLeagueTable"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:indeterminate="true"
                android:indeterminateTintMode="src_atop"
                android:indeterminateTint="@color/colorPrimary"
                android:layout_below="@id/dividerRow"
                android:visibility="gone"/>

            <TextView
                android:id="@+id/error_league_table"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:layout_below="@id/dividerRow"
                android:textSize="14sp"
                android:layout_centerInParent="true"/>

            <ListView
                android:id="@+id/leagueTableList"
                android:layout_width="wrap_content"
                android:layout_below="@id/dividerRow"
                android:layout_height="wrap_content">
            </ListView>
        </RelativeLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>